0024095: Eliminate compiler warning C4512 in MSVC++ with warning level 4

Removed most of warnings C4512 for non-copyable objects